# voice_modals

./: .env.example  .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  TTS_README.md  check_audio_devices.py  demo_tts.py  pyproject.toml  requirements.txt  test_system.py
examples/: basic_usage.py  custom_callback.py  tts_animation_export.py  tts_basic.py
src/voice_modals/: __init__.py  __main__.py  audio_capture.py  cli.py  streaming_asr.py  tts_engine.py  viseme_mapper.py
