[project]
name = "voice-modals"
version = "0.2.0"
description = "Local streaming ASR and TTS system using OpenAI Whisper and Piper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-whisper>=20231117",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "faster-whisper>=0.10.0",
    "piper-tts>=1.2.0",
    "phonemizer>=3.2.1",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
